src/objects/TraumaAssessment__c.object
<CustomObject>
    <description>Trauma Assessment used for CEP</description>
    <fields>
        <fullName>AccidentTraumaAges__c</fullName>
        <label>Accident-Related Trauma-Ages</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AccidentTraumaCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accident-Related Trauma-Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AccidentTraumaDetails__c</fullName>
        <label>Accident-Related Trauma-Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AccidentTraumaRole__c</fullName>
        <label>Accident-Related Trauma-Role</label>
        <picklist>
            <picklistValues>
                <fullName>Victim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Witness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Learned about</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Accident_Trauma_Text__c</fullName>
        <defaultValue>&quot;Child’s involvement in a serious accident which may or may not have resulted in injury for the child or for another person involved in the event. Example may include: car accident, plane crashes, boat accidents, fires and falls. &quot;</defaultValue>
        <label>Accident Trauma-Text</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Assessment__c</fullName>
        <description>Master-Child relationship</description>
        <label>Assessment</label>
        <referenceTo>Assessment__c</referenceTo>
        <relationshipLabel>Trauma Assessments</relationshipLabel>
        <relationshipName>Trauma_Assessments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BereavementAges__c</fullName>
        <label>Bereavement-Ages</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BereavementCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bereavement-Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BereavementDetails__c</fullName>
        <label>Bereavement-Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BereavementRelationship__c</fullName>
        <label>Bereavement-Relationship</label>
        <picklist>
            <picklistValues>
                <fullName>Parent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sibling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Relative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acquaintance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BereavementRole__c</fullName>
        <label>Bereavement-Role</label>
        <picklist>
            <picklistValues>
                <fullName>Witness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Learned about</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bereavement_Text__c</fullName>
        <defaultValue>&quot;The death of a child’s family member, a friend or someone they knew. Examples may include: death of an uncle; death of a friend; death of a friend’s parent.&quot;</defaultValue>
        <label>Bereavement-Text</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CommunityViolenceAges__c</fullName>
        <label>Community Violence-Ages</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CommunityViolenceCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Community Violence-Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CommunityViolenceDetails__c</fullName>
        <label>Community Violence-Details</label>
        <picklist>
            <picklistValues>
                <fullName>Gang Violence/Wars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Police Violence/Brutality</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CommunityViolenceRole__c</fullName>
        <label>Community Violence-Role</label>
        <picklist>
            <picklistValues>
                <fullName>Victim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Witness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Learned about</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Community_Violence_Text__c</fullName>
        <defaultValue>&quot;Child’s exposure to violent acts occurring within the child’s community. Community includes school surroundings, neighborhood, and any other public place frequented by the child. Violent acts may include: gang fights or gang related violence and wars, robberies, shooting, stabbing, assaults, murders, fights and bullying. &quot;</defaultValue>
        <label>Community Violence-Text</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Trauma Assessments</relationshipLabel>
        <relationshipName>Trauma_Assess_Contact</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DomesticViolenceAges__c</fullName>
        <label>Domestic Violence-Ages</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DomesticViolenceCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Domestic Violence-Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DomesticViolenceDetails__c</fullName>
        <label>Domestic Violence-Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DomesticViolenceRole__c</fullName>
        <label>Domestic Violence-Role</label>
        <picklist>
            <picklistValues>
                <fullName>Victim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Witness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Learned about</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Domestic_Violence_Text__c</fullName>
        <defaultValue>&quot;Any type of physical or emotional abuse occurring within a partnership. Examples may include: one of the parents beating up his/her spouse; boyfriend punching his girlfriend or vice versa; one of the parents diminishing the other parent’s abilities and destroying his/her relationship with the children.&quot;</defaultValue>
        <label>Domestic Violence-Text</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ImpairedCaregiverAges__c</fullName>
        <label>Impaired Caregiver-Ages</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ImpairedCaregiverCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Impaired Caregiver-Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ImpairedCaregiverDetails__c</fullName>
        <label>Impaired Caregiver-Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ImpairedCaregiverRole__c</fullName>
        <label>Impaired Caregiver-Role</label>
        <picklist>
            <picklistValues>
                <fullName>Mother</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Father</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Adult</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Impaired_Caregiver_Text__c</fullName>
        <defaultValue>&quot;Child being raised by a parent, caregiver, relative, or other adult suffering from any type of physical, medical or mental impairment. Types of impairment may include: parent with a drug addiction; foster parent suffering from bipolar disorder; caregiver with a physical disability.&quot;</defaultValue>
        <label>Impaired Caregiver-Text</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Interpersonal_Violence_Ages__c</fullName>
        <label>Interpersonal Violence-Ages</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interpersonal_Violence_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interpersonal Violence-Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interpersonal_Violence_Details__c</fullName>
        <label>Interpersonal Violence-Details</label>
        <picklist>
            <picklistValues>
                <fullName>Robbery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Homicide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assault</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suicide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suicide Attempt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kidnapping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Interpersonal_Violence_Role__c</fullName>
        <label>Interpersonal Violence-Role</label>
        <picklist>
            <picklistValues>
                <fullName>Victim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Witness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Learned about</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Interpersonal_Violence_Text__c</fullName>
        <defaultValue>&quot;The child’s exposure to interpersonal violence. Interpersonal violence may include: robbery, homicide, assault, suicide, suicide attempt, and kidnapping. &quot;</defaultValue>
        <label>Interpersonal Violence-Text</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JusticeTraumaAges__c</fullName>
        <label>Justice Trauma-Ages</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>JusticeTraumaCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Justice Trauma-Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JusticeTraumaRelationship__c</fullName>
        <label>Justice Trauma-Relationship</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>JusticeTraumaRole__c</fullName>
        <label>Justice Trauma-Role</label>
        <picklist>
            <picklistValues>
                <fullName>Victim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Learned about</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>JusticeTraumaType__c</fullName>
        <label>Justice Trauma-Type</label>
        <picklist>
            <picklistValues>
                <fullName>Police violence/brutality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Detention</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arrest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repeated stops</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reentry</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Justice_Trauma_Text__c</fullName>
        <defaultValue>&quot;The child’s exposure to the justice system. Examples may include: the child being incarcerated; incarcerated parents; incarcerated siblings; contacts with the police.&quot;</defaultValue>
        <label>Justice Trauma-Text</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MedicalTraumaAges__c</fullName>
        <label>Medical Trauma-Ages</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MedicalTraumaCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Medical Trauma-Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MedicalTraumaDetails__c</fullName>
        <label>Medical Trauma-Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MedicalTraumaRole__c</fullName>
        <label>Medical Trauma-Role</label>
        <picklist>
            <picklistValues>
                <fullName>Victim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Witness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Learned about</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Medical_Trauma_Text__c</fullName>
        <defaultValue>&quot;Child’ exposure to a life-threatening medical illness or “invasive” medical procedures that places the child or a child’s family member or friend at life-risk.&quot;</defaultValue>
        <label>Medical Trauma-Text</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NaturalDisasterAges__c</fullName>
        <label>Natural Disaster-Ages</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NaturalDisasterCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Natural Disaster-Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NaturalDisasterDetails__c</fullName>
        <label>Natural Disaster-Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NaturalDisasterRole__c</fullName>
        <label>Natural Disaster-Role</label>
        <picklist>
            <picklistValues>
                <fullName>Victim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Witness</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Natural_Disaster_Text__c</fullName>
        <defaultValue>&quot;Being exposed to/experiencing any natural disasters which resulted in the injury or death of someone, or that involved significant property loss. Natural disasters may include: earthquakes, fires, floods, hurricanes, tornados, volcanic eruptions, tsunamis, cyclonic storms, blizzards, or any other disaster caused by geological processes.&quot;</defaultValue>
        <label>Natural Disaster-Text</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NeglectAges__c</fullName>
        <label>Neglect-Ages</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NeglectCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Neglect-Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NeglectDetails__c</fullName>
        <label>Neglect-Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NeglectRole__c</fullName>
        <label>Neglect-Role</label>
        <picklist>
            <picklistValues>
                <fullName>Victim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Witness</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Neglect_Text__c</fullName>
        <defaultValue>&quot;Failure from the child’s primary caregiver to provide the child with basic needs. Basic needs include food, hygiene, clothing, shelter, education and safety. Examples may include: a child’s parent is not providing the child with food necessary to survive.&quot;</defaultValue>
        <label>Neglect-Text</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PhysicalAbuseAges__c</fullName>
        <label>Physical Abuse-Ages</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PhysicalAbuseCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Physical Abuse-Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PhysicalAbuseDetails__c</fullName>
        <label>Physical Abuse-Details</label>
        <picklist>
            <picklistValues>
                <fullName>Intra-familial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-family</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PhysicalAbuseRole__c</fullName>
        <label>Physical Abuse-Role</label>
        <picklist>
            <picklistValues>
                <fullName>Victim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Witness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Learned about</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Physical_Abuse_Text__c</fullName>
        <defaultValue>&quot;The intentional act of physically hurting another person, which causes any type of body injury or trauma. This includes: scratching, hitting, biting, slapping, punching, and pushing.&quot;</defaultValue>
        <label>Physical Abuse-Text</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PsychologicalAbuseAges__c</fullName>
        <label>Psychological Abuse-Ages</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PsychologicalAbuseCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Psychological Abuse-Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PsychologicalAbuseDetails__c</fullName>
        <label>Psychological Abuse-Details</label>
        <picklist>
            <picklistValues>
                <fullName>Intra-familial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-family</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PsychologicalAbuseRole__c</fullName>
        <label>Psychological Abuse-Role</label>
        <picklist>
            <picklistValues>
                <fullName>Victim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Witness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Learned about</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Psychological_Abuse_Text__c</fullName>
        <defaultValue>&quot;Undermining an individual&apos;s sense of self-worth and/or self-esteem is abusive. This may include, but is not limited to constant criticism, diminishing one&apos;s abilities, name-calling, or damaging one&apos;s relationship with his or her children. This also includes: threatening the person and isolating the person from others.&quot;</defaultValue>
        <label>Psychological Abuse-Text</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SchoolViolenceAges__c</fullName>
        <label>School Violence-Ages</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SchoolViolenceCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>School Violence-Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SchoolViolenceDetails__c</fullName>
        <label>School Violence-Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SchoolViolenceRole__c</fullName>
        <label>School Violence-Role</label>
        <picklist>
            <picklistValues>
                <fullName>Victim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Witness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Learned about</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>School_Violence_Text__c</fullName>
        <defaultValue>&quot;Violence that occurs in a school setting or that is specifically related to school and includes, but is not limited to, school shootings, bullying, interpersonal violence among classmates, and student suicide. &quot;</defaultValue>
        <label>School Violence-Text</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SeparationTraumaAges__c</fullName>
        <label>Separation TraumaAges</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SeparationTraumaCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Separation Trauma-Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SeparationTraumaDetails__c</fullName>
        <label>Separation Trauma-Details</label>
        <picklist>
            <picklistValues>
                <fullName>Divorce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foster care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parent Deported</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incarcerated Parent/Sibling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parent hospitalized</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refugee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Separation from country of origin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Separation_Trauma_Text__c</fullName>
        <defaultValue>&quot;The removal/separation of the child from his parent/s, sibling/s, friend/s, or any other important person in the life of the child. Examples may include: the parents of the child are divorced; the child has been separated from his family because of an impaired caregiver; the child had to leave his home country and his family because of the war in country of origin.&quot;</defaultValue>
        <label>Separation Trauma-Text</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SexualAbuseAges__c</fullName>
        <label>Sexual Abuse-Ages</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SexualAbuseCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SexualAbuse-Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SexualAbuseDetails__c</fullName>
        <label>Sexual Abuse-Details</label>
        <picklist>
            <picklistValues>
                <fullName>Intra-familial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-family</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SexualAbuseRole__c</fullName>
        <label>Sexual Abuse-Role</label>
        <picklist>
            <picklistValues>
                <fullName>Victim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Witness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Learned about</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SexualAssaultAges__c</fullName>
        <label>Sexual Assault-Ages</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SexualAssaultCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sexual Assault-Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SexualAssaultDetails__c</fullName>
        <label>Sexual Assault-Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SexualAssaultRelationship__c</fullName>
        <label>Sexual Assault-Relationship</label>
        <picklist>
            <picklistValues>
                <fullName>Stranger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Date Rape</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friend/Acquaintance</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SexualAssaultRole__c</fullName>
        <label>Sexual Assault-Role</label>
        <picklist>
            <picklistValues>
                <fullName>Victim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Witness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Learned about</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sexual_Abuse_Text__c</fullName>
        <defaultValue>&quot;Any contact or non-contact non-consensual repeated sexual behavior. Sexual abuse can be emotional or psychological and physical. Emotional or psychological sexual abuse includes any type of stalking, human trafficking, sexual harassment, and any non-consensual exposure to another person’s private parts. Physical sexual abuse includes rape and sexual assault.&quot;</defaultValue>
        <label>Sexual Abuse-Text</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sexual_Assault_Text__c</fullName>
        <defaultValue>&quot;Any type of sexual contact or behavior that occurs without the explicit consent of the recipient. Falling under the definition of sexual assault are sexual activities as forced sexual intercourse, forcible sodomy, child molestation, incest, fondling, and attempted rape. Unlike sexual abuse, sexual assault/rape has a short duration.&quot;</defaultValue>
        <label>Sexual Assault-Text</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TerrorismAges__c</fullName>
        <label>Terrorism-Ages</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TerrorismCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Terrorism-Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TerrorismDetails__c</fullName>
        <label>Terrorism-Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TerrorismRole__c</fullName>
        <label>Terrorism-Role</label>
        <picklist>
            <picklistValues>
                <fullName>Victim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Witness</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Terrorism_Text__c</fullName>
        <defaultValue>&quot;The child’s exposure to terrorist events.&quot;</defaultValue>
        <label>Terrorism-Text</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>WarViolenceAges__c</fullName>
        <label>War Violence-Ages</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>WarViolenceCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>War Violence-Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WarViolenceDetails__c</fullName>
        <label>War Violence-Details</label>
        <picklist>
            <picklistValues>
                <fullName>Combatant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Civilian</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WarViolenceRole__c</fullName>
        <label>War Violence-Role</label>
        <picklist>
            <picklistValues>
                <fullName>Victim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Witness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Learned about</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>War_Violence_Text__c</fullName>
        <defaultValue>&quot;Child’s exposure to war situations. Examples include: fighting as a soldier in the war in Syria and being a war refuge.&quot;</defaultValue>
        <label>War Violence-Text</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <label>Trauma Assessment</label>
    <nameField>
        <displayFormat>TRA-{0000}</displayFormat>
        <label>Trauma Assessment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trauma Assessments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>